force-app/main/default/objects/Agent__c/fields/Availability_Status__c.field-meta.xml
<CustomField>
    <fullName>Availability_Status__c</fullName>
    <defaultValue>&quot;Online&quot;</defaultValue>
    <description>Current availability state of the agent. Controls routing eligibility: Online agents are prioritized, Busy agents are included or excluded per config (Include_Busy_Agents__c), Away and Offline agents are always excluded from candidate pools. Updated by AgentAvailabilityController (Layer 3) and the Agent Work Panel LWC (Layer 5).</description>
    <label>Availability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
                <default>true</default>
                <label>Online</label>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Away</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>