force-app/main/default/objects/Agent__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Agent availability flag. Inactive agents are excluded from all routing and capability matching.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>