force-app/main/default/objects/Agent__c/fields/Last_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned__c</fullName>
    <description>Timestamp of last successful assignment. Updated by AssignmentResolver after each routing. Used for round-robin tie-breaking in future scoring phases.</description>
    <label>Last Assigned</label>
    <type>DateTime</type>
</CustomField>