force-app/main/default/objects/Agent__c/fields/Status_Last_Changed__c.field-meta.xml
<CustomField>
    <fullName>Status_Last_Changed__c</fullName>
    <description>Timestamp of the last Availability_Status__c change. Updated by AgentAvailabilityController (Layer 3) whenever the agent toggles their availability. Used by the Supervisor Dashboard (F6) for agent status duration display and idle time calculations.</description>
    <label>Status Last Changed</label>
    <type>DateTime</type>
</CustomField>